test/conformance/chainsaw/mutate/e2e/patchStrategicMerge-global-addifnotpresent/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-safe-to-evict
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
