test/conformance/chainsaw/mutate/e2e/patchStrategicMerge-global-addifnotpresent/resource01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-emptydir
  namespace: default
  labels:
    foo: bar
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - mountPath: /cache
      name: cache-volume
  volumes:
  - name: cache-volume
    emptyDir: {}
