test/conformance/chainsaw/mutate/e2e/patchStrategicMerge-global-addifnotpresent/resource02-mutated.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-hostpath
  namespace: default
  annotations:
    cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
