test/conformance/chainsaw/mutate/e2e/patchStrategicMerge-global-addifnotpresent/resource02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-hostpath
  namespace: default
  labels:
    foo: bar
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: test-volume
  volumes:
  - hostPath:
      path: /var/local/aaa
      type: DirectoryOrCreate
    name: test-volume
