test/conformance/chainsaw/mutate/e2e/patchStrategicMerge-global-addifnotpresent/03-resource.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resource
spec:
  timeouts: {}
  try:
  - apply:
      file: resource02.yaml
  - assert:
      file: resource02-mutated.yaml
