test/conformance/chainsaw/mutate/e2e/patchStrategicMerge-global-addifnotpresent/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: patchstrategicmerge-global-addifnotpresent
spec:
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: add-safe-to-evict
  - name: step-02
    try:
    - apply:
        file: resource01.yaml
    - assert:
        file: resource01-mutated.yaml
  - name: step-03  # cleanup context deadline exceeded
    try:
    - apply:
        file: resource02.yaml
    - assert:
        file: resource02-mutated.yaml
